# calendar-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
api/: Dockerfile  config.py  exceptions.py  main.py  pyproject.toml
api/db/: base.py  session.py
api/middleware/: logging.py
api/models/: __init__.py  calendar.py  contact.py  event.py  exchange_account.py  graph_subscription.py  llm_session.py  operation_log.py  sync_group.py  user.py
api/routers/: accounts.py  calendars.py  contacts.py  events.py  webhooks.py
api/schemas/: account.py  calendar.py  contact.py  event.py
api/services/: calendar_sync.py  contact_sync.py
api/services/auth/: oauth.py
api/services/availability/: availability_service.py  slot_finder.py
api/services/events/: event_service.py  mirror_service.py  recurrence_mapper.py  recurrence_service.py
api/services/ews/: availability.py  calendars.py  client.py  contacts.py  events.py
api/services/graph/: availability.py  calendars.py  client.py  contacts.py  events.py
api/services/llm/: openrouter_client.py  parser.py
api/services/llm/prompts/: event_parser.txt
api/utils/: encryption.py  redis_lock.py
bot/: Dockerfile  config.py  main.py  pyproject.toml
bot/handlers/: accounts.py  contacts.py  create.py  create_recurrence.py  delete.py  find_slot.py  reschedule.py  settings.py  start.py  text_input.py  today.py  week.py
bot/keyboards/: event_list_keyboard.py  inline_calendar.py  main_menu.py  recurrence_keyboard.py
bot/services/: api_client.py
bot/states/: create_states.py  slot_states.py
docs/: prd.md  tech_spec.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_recurrence_fields.py  0003_indexes_optimization.py  0004_ews_credentials.py
nginx/: nginx.conf
shared/: constants.py  pyproject.toml
shared/schemas/: event.py  slot.py  webhook.py
tests/: conftest.py
tests/unit/: test_llm_parser.py  test_mirror_service.py  test_recurrence_mapper.py  test_slot_finder.py
worker/: Dockerfile  celery_config.py  db.py  main.py  pyproject.toml
worker/tasks/: reconciliation_tasks.py  subscription_tasks.py  sync_tasks.py  webhook_tasks.py
