[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "calendar-agent-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.6.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "redis[hiredis]==5.0.4",
    "structlog==24.1.0",
    "calendar-agent-shared",
]

[tool.setuptools.packages.find]
where = ["."]
