[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-agent-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]==5.4.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "redis[hiredis]==5.0.4",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "python-dateutil==2.9.0",
    "structlog==24.1.0",
    "exchangelib==5.6.0",
    "calendar-agent-shared",
]

[tool.setuptools.packages.find]
where = ["."]
